Improve file reading to be compatible with jdk8